# GMSVirtualScreen

./: CMakeLists.txt  GMSVirtualScreen.cpp  README.md
shared-cmake-template/: CMakeLists.txt  main.cpp  screen_utils.cpp  screen_utils.h
src/: CMakeLists.txt  GMSVirtualScreen.cpp
src/MacOS/: GMSVirtualScreen.mm  mon.mm  monitor_info.mm  taskbar_etc.mm
src/Windows/: CMakeLists.txt  GMSVirtualScreen.cpp  TestDLLExternal.cpp  TestDLLInternal.cpp  base.cpp  dlltest.cpp  main.cpp  permonitor-dpi-aware.manifest  primary.cpp  refresh.cpp  screen_utils.cpp  screen_utils.h
src/Windows/tests/: edid.cpp  hmon.cpp  msver.cpp  taskbar.cpp  wmi.cpp
